// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Stack passes the snapshot test for horizontal direction 1`] = `
<View
  direction="horizontal"
  divider={<Divider />}
  spacing="l"
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for vertical direction 1`] = `
<View
  direction="vertical"
  divider={<Divider />}
  spacing="l"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginTop": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 100,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": "40%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;
